<resources>
<string name="app_name">BSER</string>
<string name="title_activity_select_subject">selectSubject</string>
<string name="action_settings">Settings</string>
<string name="title_activity_login">login</string>
<string name="title_activity_internal_chapters">internalChapters</string>
<string name="title_activity_profile">profile</string>
<string name="todo">TODO</string>
<string name="email">Email</string>
<string name="account_details">Account Details</string>
<string name="Physics">Physics</string>
<string name="rupee_symbol">\u20B9</string>
<string name="dollar_symbol">$</string>
<string name="hello_blank_fragment">Hello blank fragment</string>
<string name="personal_details">Personal Details</string>
<string name="edit">EDIT</string>
<string name="title_activity_doubts">DoubtsActivity</string>
<string name="section_format">Hello World from section: %1$d</string>
<string name="no_answer">No Answer</string>
<string name="answered">Answered</string>
<string name="simply_easy_learning">Your Virtual Guru</string>
<string name="don_t_have_an_account_register">New to Tutorix? <font color='#65ADFF'>Sign Up</font></string>
<string name="mobile_not_registered_msg">Mobile Number <font color='#ca8827'>%s</font> is not registered with us.</string>
<string name="would_you_like_to_register">Would you like to register this mobile number?</string>
<string name="would_you_like_to_generatepassword">Would you like to use forgot password option?</string>
<string name="wrong_password_msg">You entered a wrong password for the given mobile number.</string>
<string name="forgot_password">Forgot Password?</string>
<string name="generate_password">Generate Password</string>
<string name="phone_number">Phone Number</string>
<string name="password">Password</string>
<string name="enter_new_password">Enter New Password</string>
<string name="copyright">© Copyright 2022. All Rights Reserved.</string>
<string name="copyright_update">© Copyright %s. All Rights Reserved.</string>
<string name="do_you_have_go_back_click">Do you have go back?<u><font color='#65ADFF'>Click</font></u></string>
<string name="please_enter_your_registered_mobile_number">Please enter your registered Mobile Number</string>
<string name="no_internet_message">There is no internet connection.</string>
<string name="fields_mandatory">Oops! Please Enter all fields</string>
<string name="invalid_phone_number">Invalid Phone Number.</string>
<string name="server_error">There is something error, Please Try Again</string>
<string name="_6th_class">6th Class</string>
<string name="_7th_class">7th Class</string>
<string name="_8th_class">8th Class</string>
<string name="_9th_class">9th Class</string>
<string name="_class">Class</string>
<string name="back">Back</string>
<string name="proceed">Proceed</string>
<string name="_th_class">th Class</string>
<string name="name">Enter Your Name</string>
<string name="do_you_have_an_account_login"><u>Do you have an account? Login</u></string>
<string name="otp">Enter OTP</string>
<string name="please_enter_your_4_digit_otp_from_your_respective_mobile_number">Please enter your 4-digit OTP from your respective Mobile Number</string>
<string name="please_enter_your_4_digit_otp_from_your_respective_mobile_number_email">Please enter your 4-digit OTP from your respective Mobile Number/Email</string>
<string name="please_enter_your_4_digit_otp_from_your_respective_email">Please enter your 4-digit OTP from your respective email account</string>
<string name="do_you_wanna_go_back_click">Do you want to go back?<u><font color='#65ADFF'> Click </font></u></string>
<string name="switch_class">Switch Class</string>
<string name="refer_a_friend">Refer a Friend</string>
<string name="call_us">Call us</string>
<string name="subscribe_now">Subscribe Activation</string>
<string name="subscribed">View Activation</string>
<string name="terms_conditions"><![CDATA[Terms Of Use]]></string>
<string name="register_a_complaint">Register a complaint</string>
<string name="logout">Logout</string>
<string name="class_name">Class Name</string>
<string name="physics">Physics</string>
<string name="chemistry">Chemistry</string>
<string name="mathematics">Mathematics</string>
<string name="biology">Biology</string>
<string name="activity_timeline">Activity Timeline</string>
<string name="performance_analysis">Performance Analysis</string>
<string name="bookmark">Bookmarks</string>
<string name="completed_tasks">Completed Tasks</string>
<string name="completed_tasks_t">Completed\nTasks</string>
<string name="our_subject_matter_experts">Vocational Courses</string>
<string name="click_here">Click Here</string>
<string name="we_work_with_some_of_the_most_talented_and_passionate_professionals_in_the_industry">Our Expert Faculty</string>
<string name="our_expert">Our Expert Faculty</string>
<string name="welcome_to_tutorix_school">Welcome To Tutorix School</string>
<string name="welcome_to_tutorix">Welcome To Tutorix</string>
<string name="lean_concepts_through_interactive_text_and_rich_videos_on_our_brand_new_app_from_6th_standard_to_12th_standard">Lean concepts through interactive text and rich videos on our brand new app from 6th standard to 12th standard</string>
<string name="feed_back">Contact us</string>
<string name="_6th">6th Class</string>
<string name="_7th">7th Class</string>
<string name="_8th">8th Class</string>
<string name="locked">Locked</string>
<string name="pls_subscribe">Please Subscribe</string>
<string name="asked_questions">Got a Doubt</string>
<string name="start">Start</string>
<string name="no_internet">No Internet Connection</string>
<string name="no_sdcard">No SD Card available for current class</string>
<string name="there_is_error">There is something error</string>
<string name="json_error">Json error : </string>
<string name="comming_soon">Coming Soon…</string>
<string name="invalid_coupon_code">Coupon code is not valid</string>
<string name="content">Content</string>
<string name="notes_saved">Notes Saved</string>
<string name="title_activity_web_view_test">WebViewTestActivity</string>
<string name="freshchat_file_provider_authority">com.example.rbse.provider</string>
<string name="succuess">Success</string>
<string name="failure">Failure</string>
<string name="title_activity_webview_payment">WebviewPaymentActivity</string>
<string name="paymentprocess">Payment Process</string>
<string name="activation_ended">Your Activation date ended\n please subscribe again</string>
<string name="Ok">Ok</string>
<string name="cancel">Cancel</string>
<string name="subscribe">Subscribe</string>
<string name="no_data">No Data available</string>
<string name="zipcode">Zipcode</string>
<string name="country">Country</string>
<string name="all">All</string>
<string name="hint_question_details">Details of the doubt...</string>
<string name="typeyourdoubt">Type your doubt here...</string>
<string name="buy_activation">Buy Activation</string>
<string name="sales_support">Support</string>
<string name="aboutus">About Us</string>
<string name="pick_country">Select Country</string>
<string name="notes">Notes</string>
<string name="more">More</string>
<string name="billingdetails"><u>Billing Details</u></string>
<string name="deactivate">Disable SD Card</string>
<string name="renual">Renewal</string>
<string name="ok">Ok</string>
<string name="activation_success">Activation successfully</string>
<string name="contin">Continue</string>
<string name="sub_online_string">You can stream the video lessons online. You would need a stable Internet connection for this option.</string>
<string name="sub_sdcard_string">We will send you a memory card (SD Card) with the required study material.
You need to insert the SD Card into a compatible device and activate this subscription by the activation key that you will receive.</string>
<string name="sub_tab_string">You will get all the study material bundled in a Lenovo tablet.
You need to activate this subscription by the activation key that you will receive.</string>
<string name="shippingdetails"><u>Shipping Details</u></string>
<string name="billingshiping">Shipping details are same as billing details</string>
<string name="q">Q. </string>
<string name="raiseyourdbts">Raise Your Doubt</string>
<string name="myorders">Order History</string>
<string name="trackinfo"><u>Track Information</u></string>
<string name="syllabus">Syllabus</string>
<string name="signin">Sign In</string>
<string name="signup">Sign Up</string>
<string name="alreadyhaveacnt">Already have account?<font color='#65ADFF'> Login</font></string>
<string name="submit">Submit</string>
<string name="service_availabile">This feature  is available only for Active users. Activate your account now using the activation code!</string>
<string name="error_1">Slow Internet connection, Try again</string>
<string name="error_2">Please Try again</string>
<string name="error_3">Please check network and  Try again</string>
<string name="error_4">Internal error, Try again</string>
<string name="over_all_tracking">Overall Tracking</string>
<string name="over_all_activity">Activity</string>
<string name="home"> Home </string>
<string name="perform">Analysis</string>
<string name="bookmarks"> Bookmarks </string>
<string name="activity"> Activities </string>
<string name="menu"> More </string>
<string name="home_font"> &#xf015; </string>
<string name="perform_font"> &#xf201; </string>
<string name="perform_font_2"> &#xf080; </string>
<string name="bookmark_font"> &#xf02e; </string>
<string name="tools_font"> &#xf013; </string>
<string name="activity_font"> &#xf08d; </string>
<string name="doubt_font"> &#xf086; </string>
<string name="search_font"> &#xf002; </string>
<string name="menu_font"> &#xf0c9; </string>
<string name="dount_font"> &#xf059; </string>
<string name="grid_font"> &#xf58e; </string>
<string name="list_font"> &#xf03a; </string>
<string name="faq">FAQs</string>
<string name="refund">Refund Policy</string>
<string name="privacy">Privacy Policy</string>
<string name="personaldetails">Personal Details</string>
<string name="previous">Previous Report</string>
<string name="click_here_previous"><u>Click here </u>to see the previous performances</string>
<string name="next">Next</string>
<string name="whocansubmitdoubts">Who can submit a doubt?</string>
<string name="activated_user">Activated Users</string>
<string name="activated_string_for_doubts">If you are an activated user then you can submit unlimited number of doubts and get them clarified on priority.</string>
<string name="rewardpoints">Reward Coins</string>
<string name="use_rewardpoints">Either use your reward coins to get great discount on your next subscription or use them to submit a new doubt.</string>
<string name="one_gold">1 Gold Coin</string>
<string name="one_gold_value">= 2 Doubts</string>
<string name="one_siver">1 Silver Coin </string>
<string name="one_siver_value">= 1 Doubt</string>
<string name="currently_you_have">Currently you are eligibility to ask %s doubt(s).</string>
<string name="test_rule_1">This mock test comprises of 180 Multiple Choice Questions (MCQs) from Biology, Physics and Chemistry</string>
<string name="test_rule_2">Every question is followed by different options. Just Tab on the correct option to select your answer for the question.</string>
<string name="test_rule_3">Total duration of this mock test is 180 minutes. You also have option to pause and resume the test anytime. During pause, your test time will not be calculated.</string>
<string name="test_rule_4">Every attempted correct answer will reward you 4 marks whereas every attempted wrong answer will penalize you for -1 Mark.</string>
<string name="before_attempting">Before attempting this quiz, please make sure you have watched the associated video.</string>
<string name="every_quetion_is">Every question is followed by options. Tap on the correct option.</string>
<string name="the_time_you">The time you spend on each question is calculated.</string>
</resources>