<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"

    android:layout_marginRight="10dp"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingTop="5dp"
    android:paddingRight="10dp"
    android:paddingBottom="5dp">

    <TextView
        android:id="@+id/txt_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_r1_bio"
        android:drawablePadding="18dp"
        android:fontFamily="@font/opensans_regular"
        android:gravity="center_vertical"
        android:padding="5dp"
        android:text="@string/before_attempting"
        android:textAllCaps="false"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/txt_ans"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:drawableStart="@drawable/ic_r2_bio"
        android:drawablePadding="18dp"
        android:fontFamily="@font/opensans_regular"
        android:gravity="center_vertical"
        android:padding="5dp"
        android:text="@string/every_quetion_is"
        android:textAllCaps="false"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/txt_time"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:drawableStart="@drawable/ic_r3_bio"
        android:drawablePadding="18dp"
        android:fontFamily="@font/opensans_regular"
        android:gravity="center_vertical"
        android:padding="5dp"
        android:text="@string/the_time_you"
        android:textAllCaps="false"
        android:textSize="16sp" />

    <LinearLayout
        android:id="@+id/lnr_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"

        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_previous"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/_5dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:drawableStart="@drawable/ic_r4_bio"
            android:drawablePadding="18dp"
            android:fontFamily="@font/opensans_regular"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:text="@string/click_here_previous"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_previous"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10dp"
            android:layout_marginBottom="@dimen/_10dp"
            android:background="@drawable/login_button"
            android:fontFamily="@font/opensans_regular"
            android:gravity="center"
            android:minEms="10"
            android:text="@string/previous"
            android:textAllCaps="false"
            android:textColor="#FFF"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_start"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/quiz_button_top"
            android:background="@drawable/login_button"
            android:fontFamily="@font/opensans_regular"
            android:gravity="center"
            android:minEms="10"
            android:onClick="startQuiz"
            android:text="@string/start"
            android:textAllCaps="true"
            android:textColor="#FFF"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>