<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/activstion_background"
    >







    <RelativeLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">



        <TextView
            android:id="@+id/activity_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:fontFamily="@font/opensans_regular"
            android:text="@string/whocansubmitdoubts"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_20sp" />

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_alignParentStart="true"
            android:background="@drawable/ripple_radius"
            android:layout_marginEnd="@dimen/_8dp"
            android:layout_marginLeft="@dimen/_6dp"
            android:padding="@dimen/_5dp"
            android:tint="@color/colorPrimary"
            android:layout_centerVertical="true"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/ic_left_arrow" />

    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_above="@+id/lnr_bottom"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/_12dp"


            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginBottom="@dimen/_5dp"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="@dimen/_48dp"
                    android:layout_height="@dimen/_48dp"
                    android:src="@drawable/ic_profile_user"
                    android:layout_marginRight="@dimen/_10dp"
                    />
                <com.tutorix.tutorialspoint.views.CustomTextview
                    android:id="@+id/txt_silvercoins"
                    android:text="@string/activated_user"
                    android:fontFamily="@font/opensans_regular"
                    android:layout_gravity="center"
                    android:textSize="@dimen/_18sp"

                    android:gravity="center_vertical"
                    android:layout_marginLeft="@dimen/_8dp"
                    android:textStyle="bold"
                    android:textColor="@color/subtitle_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <com.tutorix.tutorialspoint.views.CustomTextview

                android:text="@string/activated_string_for_doubts"
                android:fontFamily="@font/opensans_regular"
                android:lineSpacingExtra="@dimen/_1dp"
                android:textSize="@dimen/_16sp"

                android:gravity="center_vertical"
                android:layout_margin="@dimen/_12dp"

                android:textColor="@color/subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginBottom="@dimen/_5dp"
                android:layout_marginTop="@dimen/_15dp"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="@dimen/_48dp"
                    android:layout_height="@dimen/_48dp"
                    android:src="@drawable/ic_coin"
                    android:layout_marginRight="@dimen/_10dp"
                    />
                <com.tutorix.tutorialspoint.views.CustomTextview

                    android:text="@string/rewardpoints"
                    android:fontFamily="@font/opensans_regular"
                    android:layout_gravity="center"
                    android:textSize="@dimen/_18sp"

                    android:gravity="center_vertical"
                    android:layout_marginLeft="@dimen/_8dp"
                    android:textStyle="bold"
                    android:textColor="@color/subtitle_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <com.tutorix.tutorialspoint.views.CustomTextview

                android:text="@string/use_rewardpoints"
                android:fontFamily="@font/opensans_regular"
                android:lineSpacingExtra="@dimen/_2dp"
                android:textSize="@dimen/_16sp"

                android:gravity="center_vertical"
                android:layout_margin="@dimen/_12dp"

                android:textColor="@color/subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginLeft="@dimen/_12dp"
                android:layout_marginTop="@dimen/_12dp"
                android:layout_height="wrap_content">
                <com.tutorix.tutorialspoint.views.CustomTextview

                   android:minWidth="@dimen/_100dp"
                    android:fontFamily="@font/opensans_regular"
                    android:lineSpacingExtra="@dimen/_2dp"
                    android:textSize="@dimen/_16sp"
                    android:text="@string/one_gold"
                    android:gravity="center_vertical"

                    android:textColor="@color/subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <com.tutorix.tutorialspoint.views.CustomTextview
                    android:text="@string/one_gold_value"
                    android:minWidth="@dimen/_150dp"
                    android:fontFamily="@font/opensans_regular"
                    android:lineSpacingExtra="@dimen/_2dp"
                    android:textSize="@dimen/_16sp"

                    android:gravity="center_vertical"


                    android:textColor="@color/subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginLeft="@dimen/_12dp"
                android:layout_marginTop="@dimen/_5dp"
                android:layout_height="wrap_content">
                <com.tutorix.tutorialspoint.views.CustomTextview

                   android:minWidth="@dimen/_100dp"
                    android:fontFamily="@font/opensans_regular"
                    android:lineSpacingExtra="@dimen/_2dp"
                    android:textSize="@dimen/_16sp"
                    android:text="@string/one_siver"
                    android:gravity="center_vertical"

                    android:textColor="@color/subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <com.tutorix.tutorialspoint.views.CustomTextview

                    android:minWidth="@dimen/_150dp"
                    android:fontFamily="@font/opensans_regular"
                    android:lineSpacingExtra="@dimen/_2dp"
                    android:textSize="@dimen/_16sp"
                    android:text="@string/one_siver_value"
                    android:gravity="center_vertical"


                    android:textColor="@color/subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <com.tutorix.tutorialspoint.views.CustomTextview
                android:id="@+id/txt_current_points"
                android:text="@string/currently_you_have"
                android:fontFamily="@font/opensans_regular"
                android:lineSpacingExtra="@dimen/_2dp"
                android:textSize="@dimen/_15sp"

                android:gravity="center_vertical"
                android:layout_margin="@dimen/_12dp"
                android:textStyle="bold"
                android:textColor="@color/subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/lnr_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"

        android:background="@drawable/search_background_drawable"
        >
        <TextView
            android:id="@+id/txt_previous"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:clickable="false"

            android:fontFamily="@font/opensans_regular"
            android:padding="12dp"

            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/previous"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_18sp" />
        <TextView
            android:id="@+id/txt_next"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:clickable="false"
            android:textStyle="bold"
            android:fontFamily="@font/opensans_regular"
            android:padding="12dp"

            android:gravity="center"

            android:text="@string/next"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_18sp" />

    </LinearLayout>

</RelativeLayout>