<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"

        android:layout_marginRight="10dp"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        >

        <TextView
            android:id="@+id/txt_r1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:drawableStart="@drawable/ic_r1_bio"
            android:drawablePadding="18dp"
            android:fontFamily="@font/opensans_regular"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:text="@string/test_rule_1"
            android:textAllCaps="false"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txt_r2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawableStart="@drawable/ic_r2_bio"
            android:drawablePadding="18dp"
            android:fontFamily="@font/opensans_regular"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:textColor="@color/black"
            android:text="@string/test_rule_2"
            android:textAllCaps="false"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txt_r3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawableStart="@drawable/ic_r3_bio"
            android:drawablePadding="18dp"
            android:fontFamily="@font/opensans_regular"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:textColor="@color/black"
            android:text="@string/test_rule_3"
            android:textAllCaps="false"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/txt_r4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawableStart="@drawable/ic_r4"
            android:drawablePadding="18dp"
            android:textColor="@color/black"
            android:backgroundTint="@color/bio_background"
            android:fontFamily="@font/opensans_regular"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:text="@string/test_rule_4"
            android:textAllCaps="false"
            android:textSize="16sp" />


    </LinearLayout>
